make sure we do not truncate arith expresssion > 10 digits. freebsd bin/sh/expand.c revision 1.15.  NetBSD PR 13943.